# app_ai_flask

./: README.md  app.py  pyproject.toml  tailwind.config.js
templates/: index.html
